Start to write generative notebook

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -44,7 +44,7 @@
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from datasets import Dataset, DatasetDict\n",
+    "from datasets import Dataset, DatasetDict, load_dataset\n",
     "from transformers import (AutoTokenizer, AutoModelForTokenClassification, DataCollatorForTokenClassification, \n",
     "                          TrainingArguments, Trainer, pipeline)\n",
     "from typing import Union, Any, Optional\n",
@@ -121,12 +121,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "357c61f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SIZE = 192 # Number of words to put on each input of the encoder model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "737f2acb",
+   "metadata": {},
+   "source": [
+    "In the following code, we create the dataset.\n",
+    "\n",
+    "The result is published as a Hugging Face dataset, so standard Hugging Face API could be applied on it.\n",
+    "That is the benefit of following an open standard!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8daa7d2e-00af-41b7-b24f-99065b5b59e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SIZE = 192 # Number of words to put on each input of the encoder model\n",
-    "\n",
     "def group_into_sequences(df, seq_len=SIZE):\n",
     "    tokens = df['token'].tolist()\n",
     "    labels = df['label'].tolist()\n",
@@ -160,12 +179,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4a56efa",
+   "metadata": {},
+   "source": [
+    "Or we can simply load the result dataset from Hugging Face:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7c18589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_dict = load_dataset(f\"fax4ever/manzoni-{SIZE}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9e4cce7",
    "metadata": {},
    "source": [
-    "The result is published as a Hugging Face dataset, so standard Hugging Face API could be applied on it.\n",
-    "That is the benefit of following an open standard!\n",
-    "\n",
     "## PART TWO: Tokenize the dataset\n",
     "\n",
     "In the tokenization process each word of each input will become one or more tokens.\n",
