Finalize v1 generative splitter

--- a/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_embeddings.ipynb
@@ -496,7 +496,7 @@
     "    legno, si rallegrò tutto; e dandosi una fregatina di\n",
     "    mani per la contentezza, borbottò a mezza voce:\n",
     "    \"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
-    "\"\"\"\n",
+    "\"\"\".rstrip()\n",
     "\n",
     "inference_pipeline(text)"
    ]
