--- a/sentence_splitter/colabs/sentence_splitter_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative.ipynb
@@ -39,11 +39,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from unsloth import FastLanguageModel\n",
-    "import torch\n",
     "import random\n",
     "import numpy as np\n",
-    "from datasets import load_dataset, Dataset"
+    "import torch\n",
+    "from datasets import load_dataset\n",
+    "from transformers import TextStreamer\n",
+    "from unsloth import FastLanguageModel\n",
+    "from trl import SFTTrainer, SFTConfig"
    ]
   },
   {
@@ -51,7 +53,8 @@
    "id": "d1ef295e",
    "metadata": {},
    "source": [
-    "First of all, let's verify we support accelerator:"
+    "First of all, let's verify we support accelerator.\n",
+    "This notebook requires a GPU."
    ]
   },
   {
@@ -79,6 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "RANDOM_STATE = 777\n",
+    "\n",
     "def set_seed(seed=777, total_determinism=False):\n",
     "    seed = seed\n",
     "    torch.manual_seed(seed)\n",
@@ -91,7 +96,7 @@
     "    if torch.cuda.is_available():\n",
     "        torch.cuda.manual_seed(seed)\n",
     "        torch.cuda.manual_seed_all(seed)\n",
-    "set_seed() # Set the seed for reproducibility -- use_deterministic_algorithms can make training slower :("
+    "set_seed(RANDOM_STATE) # Set the seed for reproducibility -- use_deterministic_algorithms can make training slower :("
    ]
   },
   {
@@ -170,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_dict = load_dataset(f\"fax4ever/llm-manzoni-{SIZE}\")"
+    "llm_dataset_dict = load_dataset(f\"fax4ever/llm-manzoni-{SIZE}\")"
    ]
   },
   {
@@ -220,8 +225,182 @@
    "id": "3bbd0d23",
    "metadata": {},
    "source": [
-    "The `conversation` method will produce a full question / answer converation, that will be used for training.\n",
-    "the `question` method will produce just a question prompt, that will be use for inference."
+    "The `conversation` method produces a full question / answer converation, it is used for fine-tune the model.\n",
+    "the `question` method produces just a question prompt, it will be use for inference later in the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2be2afc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_conversations(examples):\n",
+    "    input_texts  = examples[\"input_text\"]\n",
+    "    output_texts = examples[\"output_text\"]\n",
+    "\n",
+    "    conversations = []\n",
+    "    for input_text, output_text in zip(input_texts, output_texts):\n",
+    "        conversations.append(Prompt(input_text).conversation(output_text))\n",
+    "    return { \"conversations\": conversations, }\n",
+    "\n",
+    "\n",
+    "conversations = llm_dataset_dict.map(create_conversations, batched = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "008379c9",
+   "metadata": {},
+   "source": [
+    "## PART THREE: Parameter-Efficient Fine-Tuning\n",
+    "\n",
+    "We define here a quantized model and then we apply a LoRA (Low Rank Approximation) adapter,\n",
+    "to make the fine tuning of the LLM possible with few resources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b58b50a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LLM_MODEL = \"unsloth/Qwen3-4B\"\n",
+    "\n",
+    "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "    model_name = LLM_MODEL,  # you can use the 14B here!\n",
+    "    max_seq_length = 2048,   # Context length - can be longer, but uses more memory\n",
+    "    load_in_4bit = True,     # 4bit uses much less memory\n",
+    "    load_in_8bit = False,    # A bit more accurate, uses 2x memory\n",
+    "    full_finetuning = False, # We have full finetuning now!\n",
+    "    # token = \"hf_...\",      # use one if using gated models\n",
+    ")\n",
+    "\n",
+    "model = FastLanguageModel.get_peft_model(\n",
+    "    model,\n",
+    "    r = 32,           # Choose any number > 0! Suggested 8, 16, 32, 64, 128\n",
+    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
+    "    lora_alpha = 32,  # Best to choose alpha = rank or rank*2\n",
+    "    lora_dropout = 0, # Supports any, but = 0 is optimized\n",
+    "    bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
+    "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+    "    random_state = RANDOM_STATE,\n",
+    "    use_rslora = False,   # We support rank stabilized LoRA\n",
+    "    loftq_config = None,  # And LoftQ\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "648c2e1a",
+   "metadata": {},
+   "source": [
+    "We need need to put the conversations templates in the canonical form for the specific model.\n",
+    "For doing it, we will use the tokenizer of the model.\n",
+    "From this set we will create the final dataset, that will be used by the supervised fine tuning training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59b3c0b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_dataset = tokenizer.apply_chat_template(conversations, tokenize = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a2d1ee6",
+   "metadata": {},
+   "source": [
+    "Finally, we can train the model and save the model remotely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe72e185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = SFTTrainer(\n",
+    "    model = model,\n",
+    "    tokenizer = tokenizer,\n",
+    "    train_dataset = chat_dataset[\"train\"],\n",
+    "    eval_dataset = chat_dataset[\"validation\"],\n",
+    "    args = SFTConfig(\n",
+    "        dataset_text_field = \"conversations\",\n",
+    "        per_device_train_batch_size = 2,\n",
+    "        gradient_accumulation_steps = 4, # Use GA to mimic batch size!\n",
+    "        warmup_steps = 5,  # ~500-2000 or 10-20% of the total steps\n",
+    "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        max_steps = 30,\n",
+    "        learning_rate = 2e-4, # Reduce to 2e-5 for long training runs\n",
+    "        logging_steps = 1,\n",
+    "        optim = \"adamw_8bit\",\n",
+    "        weight_decay = 0.01,\n",
+    "        lr_scheduler_type = \"linear\",\n",
+    "        seed = 3407,\n",
+    "        report_to = \"none\", # Use this for WandB etc\n",
+    "    ),\n",
+    ")\n",
+    "trainer.train()\n",
+    "\n",
+    "trained_model_name = LLM_MODEL + \"-sentence-splitter\"\n",
+    "model_checkpoint = \"fax4ever/\" + trained_model_name\n",
+    "\n",
+    "model.push_to_hub(model_checkpoint, token=os.environ['HF_TOKEN'])\n",
+    "tokenizer.push_to_hub(model_checkpoint, token=os.environ['HF_TOKEN'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32089c83",
+   "metadata": {},
+   "source": [
+    "## PART FOUR: INFERENCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afdd6b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_text = \"\"\"\n",
+    "    Non era un legno di lusso, ma un semplice pezzo\n",
+    "    da catasta, di quelli che d’inverno si mettono nelle\n",
+    "    stufe e nei caminetti per accendere il fuoco e per riscaldare le stanze.\n",
+    "    Non so come andasse, ma il fatto gli è che un bel\n",
+    "    giorno questo pezzo di legno capitò nella bottega\n",
+    "    di un vecchio falegname, il quale aveva nome mastr’Antonio, se non che tutti lo chiamavano maestro\n",
+    "    Ciliegia, per via della punta del suo naso, che era\n",
+    "    sempre lustra e paonazza, come una ciliegia matura.\n",
+    "    Appena maestro Ciliegia ebbe visto quel pezzo di\n",
+    "    legno, si rallegrò tutto; e dandosi una fregatina di\n",
+    "    mani per la contentezza, borbottò a mezza voce:\n",
+    "    \"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
+    "\"\"\".rstrip()\n",
+    "\n",
+    "question = tokenizer.apply_chat_template(\n",
+    "    [Prompt(input_text).question()], \n",
+    "    tokenize = False,\n",
+    "    add_generation_prompt = True, # Must add for generation\n",
+    "    enable_thinking = False, # Disable thinking\n",
+    ")\n",
+    "\n",
+    "_ = model.generate(\n",
+    "    **tokenizer(question, return_tensors = \"pt\").to(\"cuda\"),\n",
+    "    max_new_tokens = 256, # Increase for longer outputs!\n",
+    "    temperature = 0.7, top_p = 0.8, top_k = 20, # For non thinking\n",
+    "    streamer = TextStreamer(tokenizer, skip_prompt = True),\n",
+    ")"
    ]
   }
  ],
